--- a/scss/_adaptive-index.scss
+++ b/scss/_adaptive-index.scss
@@ -92,7 +92,8 @@
         }
 
         &__title {
-            font-size: 25px;
+            font-size: 5vw !important;
+            line-height: 5vw !important;
         }
     }
 
