--- a/scss/_exposition.scss
+++ b/scss/_exposition.scss
@@ -41,6 +41,7 @@
         margin-top: 30px;
         text-align: center;
         font-size: 26px;
+        font-weight: 900;
     }
 
     &__block-descr {
@@ -103,6 +104,7 @@
         font-size: 26px;
         text-align: center;
         margin-top: 25px;
+        font-weight: 900;
     }
 
     &__text {
@@ -189,6 +191,7 @@
         font-size: 26px;
         text-align: center;
         margin-top: 25px;
+        font-weight: 900;
     }
 
     &__text {
