--- a/adaptive/_adaptive-exp.scss
+++ b/adaptive/_adaptive-exp.scss
@@ -277,18 +277,18 @@
 
         &__block-title {
             margin-top: 10px;
-            font-size: 10px;
+            font-size: 3.5vw;
             width: 100%;
         }
 
         &__block-descr {
-            font-size: 9px;
+            font-size: 3vw;
             margin-top: 0px;
             -webkit-line-clamp: 3;
         }
 
         &__block-link {
-            margin-top: 30px;
+            margin-top: 35px;
             font-size: 14px;
         }
     }
@@ -300,19 +300,19 @@
         }
 
         &__block-title {
-            font-size: 8px;
+            font-size: 2.5vw;
             width: 100%;
         }
 
         &__block-descr {
-            font-size: 9px;
+            font-size: 2.5vw;
             margin-top: 5px;
             -webkit-line-clamp: 3;
         }
 
         &__downtext {
             margin-top: 5px;
-            font-size: 9px;
+            font-size: 2.5vw;
             text-align: justify;
             -webkit-line-clamp: 5;
         }
@@ -332,23 +332,21 @@
 
         &__block-link {
             font-size: 16px;
-            margin-top: 5px;
+            margin-top: 30px;
         }
 
         &__block-title {
-            font-size: 9px;
+            font-size: 2.7vw;
         }
 
-
-
         &__block-descr {
-            font-size: 9px;
+            font-size: 2.5vw;
             margin-top: 5px;
             -webkit-line-clamp: 3;
         }
 
         &__down {
-            margin-top: 15px;
+            margin-top: 5px;
         }
 
         &__text {
