--- a/adaptive/_adaptive-exp.scss
+++ b/adaptive/_adaptive-exp.scss
@@ -317,6 +317,10 @@
             -webkit-line-clamp: 5;
         }
 
+        .exspo1__block-link {
+            margin-top: 10px;
+        }
+
     }
 
     .exspo3 {
