--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import 'general';
+@import 'vars';
 @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pangolin&family=Special+Elite&display=swap');
 
@@ -10,8 +11,6 @@ body {
     font-family: 'Pangolin', cursive;
 }
 
-$accent: #0067FF;
-$second-accent: #2969C8;
 
 .upheader {
     background: $second-accent;
