--- a/scss/style.scss
+++ b/scss/style.scss
@@ -438,6 +438,45 @@ body {
     }
 }
 
+.blog-item {
+    margin-top: 150px;
+
+    &__wrapper {
+        display: flex;
+        gap: 30px;
+    }
+
+    &__block {
+        width: 60%;
+    }
+
+    &__image {
+        width: 40%;
+
+        img {
+            width: 100%;
+        }
+    }
+
+    &__title {
+        font-size: 30px;
+        font-weight: 900;
+    }
+
+    &__descr {
+        font-size: 20px;
+        margin-top: 15px;
+    }
+
+    &__link {
+        margin-top: 30px;
+        font-size: 22px;
+        border-bottom: 1px solid #000;
+        width: max-content;
+    }
+}
+
+
 @import 'exposition';
 @import 'post';
 @import 'pagination';
