--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,14 @@ body {
 }
 
 
+.hidden-exspo {
+    display: none !important;
+}
+
+.hidden {
+    display: none !important;
+}
+
 .upheader {
     background: $second-accent;
 
