--- a/adaptive/_adaptive-index.scss
+++ b/adaptive/_adaptive-index.scss
@@ -95,14 +95,20 @@
     .story {
         margin-top: 50px;
 
+        &__image {
+            width: 75%;
+        }
+
         &__block {
             font-size: 18px;
+            justify-content: center;
             align-items: center;
             flex-wrap: wrap;
 
-            img {
-                width: 100%;
+            p {
+                width: 75%;
             }
+
         }
     }
 
@@ -146,8 +152,13 @@
 @media (max-width:568px) {
 
     .story {
+
         &__block {
             font-size: 16px;
+
+            p {
+                width: 100%;
+            }
         }
     }
 
