--- a/adaptive/_adaptive-index.scss
+++ b/adaptive/_adaptive-index.scss
@@ -45,8 +45,7 @@
         }
 
         img {
-            height: auto !important;
-            width: 50% !important;
+            display: none;
         }
 
 
@@ -112,6 +111,26 @@
         }
     }
 
+    .question {
+        &__block {
+            flex-wrap: wrap;
+            flex-direction: column !important;
+            width: 100%;
+        }
+
+        &__image {
+            width: 100%;
+
+            img {
+                margin: 0 auto;
+            }
+        }
+
+        &__text {
+            width: 100%;
+        }
+    }
+
     .admin {
         &__block {
             flex-wrap: wrap;
@@ -126,17 +145,6 @@
         }
     }
 
-    .form {
-        &__wrapper {
-            flex-direction: column-reverse;
-            padding: 10px;
-
-            img {
-                display: block;
-                margin: 0 auto;
-            }
-        }
-    }
 
     .subscribe {
         &__wrapper {
@@ -183,6 +191,29 @@
             input {
                 width: 100%;
             }
+
+            select {
+                width: 100%;
+
+                option {
+                    font-size: 12px;
+                }
+            }
+        }
+    }
+
+
+    .question {
+        &__text {
+            font-size: 14px;
+        }
+
+        &__text-big {
+            font-size: 30px;
+        }
+
+        &__image {
+            width: 100%;
         }
     }
 
