--- a/scss/style.scss
+++ b/scss/style.scss
@@ -354,6 +354,7 @@ body {
 
     &__bg {
         background: rgba(255, 255, 255, 0.75);
+        padding: 10px;
         padding-top: 30px;
     }
 
@@ -384,6 +385,15 @@ body {
             border: 1px solid rgb(116, 116, 116);
             padding-left: 15px;
         }
+
+        select {
+            height: 45px;
+            padding-top: 5px;
+            width: 400px;
+            border: 1px solid rgb(116, 116, 116);
+
+        }
+
     }
 
     &__button {
