--- a/scss/style.scss
+++ b/scss/style.scss
@@ -152,6 +152,30 @@ body {
         }
     }
 
+    &__table {
+        width: 100%;
+        background: white;
+        border: 1px solid #000;
+        margin: 30px 0 30px;
+
+        tr {
+            border: 1px solid #000;
+        }
+
+        td {
+            border: 1px solid #000;
+            padding: 10px;
+
+        }
+    }
+
+    &__main {
+        width: 100%;
+        font-size: 22px;
+        margin-top: 50px;
+        @include firstLetter;
+    }
+
     &__block {
         display: flex;
         margin-top: 50px;
@@ -169,6 +193,27 @@ body {
 
     }
 }
+
+.guests {
+    margin-top: 150px;
+
+    &__title {
+        color: $accent;
+    }
+
+    &__slider {
+        position: relative;
+        margin-top: 50px;
+
+        swiper-slide>img {
+
+            height: 400px;
+            object-fit: cover;
+        }
+    }
+
+}
+
 
 .admin {
     margin-top: 150px;
@@ -217,8 +262,22 @@ body {
     }
 }
 
+.prevButton,
+.nextButton {
+    width: max-content;
+    background: rgba(41, 105, 200, 0.5);
+    padding: 5px;
+}
+
 .question {
     margin-top: 100px;
+    position: relative;
+
+    &__buttons {
+        margin-top: 15px;
+        display: flex;
+        justify-content: space-between;
+    }
 
     &__title {}
 
