--- a/adaptive/_adaptive-index.scss
+++ b/adaptive/_adaptive-index.scss
@@ -118,6 +118,7 @@
             width: 100%;
         }
 
+
         &__image {
             width: 100%;
 
@@ -146,15 +147,6 @@
     }
 
 
-    .subscribe {
-        &__wrapper {
-            width: 100%;
-        }
-
-        button {
-            margin-top: 15px;
-        }
-    }
 }
 
 @media (max-width:568px) {
@@ -207,6 +199,17 @@
         &__text {
             font-size: 14px;
         }
+
+        &__buttons {
+            flex-direction: column-reverse;
+
+            button {
+                width: 100%;
+                height: 35px;
+                margin-top: 15px;
+            }
+        }
+
 
         &__text-big {
             font-size: 30px;
